tests/type-errors/invalid_type_for_key_map.arl
archetype invalid_type_for_key_map

entry ident () {
  effect {
    var m : map<list<string>, int> = [];
  }
}
